Attempting to strip out unnecessary test imports